OSD: Do not connect to member QObject's destroyed signal

We're keeping a strong reference to it

BUG: 466914